🐞 fix: hydratation AuthWrap

--- a/client/styles/pages/dashboard.module.scss
+++ b/client/styles/pages/dashboard.module.scss
@@ -127,7 +127,7 @@
   }
 
   .scrollable {
-    overflow: scroll;
+    overflow-x: scroll;
 
     .articles_container {
       display: flex;
